add -UseSuperWords benchmarks